[package]
name = "tiltify"
version = "0.1.3"
authors = ["Gary M. Josack <gary@byoteki.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A basic client library for Tiltifiy's API"
repository = "https://github.com/ZeroCostGoods/tiltify.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
clap = "2"
